--- a/IT/lab 2-3/blank.html
+++ b/IT/lab 2-3/blank.html
@@ -1,9 +1,9 @@
 <HTML><HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
-<TITLE>blank</TITLE>
+<TITLE>Lab 2.3</TITLE>
 </HEAD> 
 
-<BODY BGCOLOR="white" 
+<BODY BGCOLOR=#aed8e6 
  TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 
 <IMG name = "img">
@@ -51,8 +51,12 @@
 }
 </script>
 
-<img src="r1.gif" class="draggable">
+  <h2 align = center>Собери мозаику!</h2>
+  <p>Перемещая картинки мышкой нужно собрать рисунок.</p>
+
+  <img src="r1.gif" class="draggable">
   <img src="r2.gif" class="draggable">
+  <br>
   <img src="r3.gif" class="draggable">
   <img src="r4.gif" class="draggable">
 
