Небольшая правка в лабе 2.4
Устранил момент с картинкой, улетающей в никуда

--- a/IT/lab 2-4/lab 2-4.html
+++ b/IT/lab 2-4/lab 2-4.html
@@ -15,8 +15,10 @@
  }
  
  function b (Image) {
-		Image.width -= 3;
-		Image.height -= 5;
+		if (Image.width >= 300) {
+			Image.width -= 3;
+			Image.height -= 5;
+		}
  }
  </script>
  <a href = "#"
