--- a/IT/lab 1-7/blank.html
+++ b/IT/lab 1-7/blank.html
@@ -9,24 +9,33 @@
           font-size: 30pt;
           font-weight: bold;
           font-family: Arial }
-    .t2 { margin-top: -37pt;
-               margin-left: 8pt;
+    .t2 { margin-top: -39pt;
+               margin-left: 6pt;
 			   text-align: center;
                color: Blue;
                font-size: 30pt;
                font-weight: bold;
                font-family: Arial}
 	.first { background-color: white;
+		text-indent: 1em;
+		padding-left: 2em;
+		padding-right: 2em;
 		border-left: solid;
 		border-left-color: red;
 		font-size: 12pt;
 		font-family: Arial}
 	.second { background-color: white;
+		padding-left: 2em;
+		padding-right: 2em;
+		text-indent: 1em;
 		border-right: double;
 		border-right-color: blue;
 		font-size: 12pt;
 		font-family: Arial}
 	.third { background-color: white;
+		padding-left: 2em;
+		padding-right: 2em;
+		text-indent: 3em;
 		font-size: 12pt;
 		font-family: Arial}
 	.fourth { background-color: green;
@@ -63,7 +72,7 @@ universe), которая преобразила бы всю информационную деятельность. Но только в
 <DIV CLASS="fourth"><P>WWW - "ВСЕМИРНАЯ ПАУТИНА"</DIV>
  
 <P class="second">
-WWW – это аббревиатура от "World Wide Web" ("Всемирная паутина"). 
+WWW – это аббревиатура от <SUP><BIG>"World Wide Web"</BIG></SUP><SUB><sub><BIG><big>("Всемирная паутина")</big></BIG></sub></SUB>. 
 Официальное определение World Wide Web звучит как мировая виртуальная 
 файловая система – широкомасштабная гипермедиа-среда, ориентированная на 
 предоставление универсального доступа к информационным ресурсам. 
