Доделал лабораторную 2.7 по ИТ

--- a/IT/lab 2-7/index.html
+++ b/IT/lab 2-7/index.html
@@ -26,6 +26,7 @@ function textblOnClick() {
 	var c = document.getElementById('textblock'); 
 	for(var i = 0; a.charAt(i) != ""; i++){
 		c.innerHTML += a.charAt(i);
+		c.innerHTML += '\n';
 	}
 }
 
