--- a/IT/lab 2-12/blank.html
+++ b/IT/lab 2-12/blank.html
@@ -8,7 +8,7 @@
 <BODY background="dekor.gif" BGCOLOR="white" 
  TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 <div align="center">Двоичный поиск</div>
-<form>	
+<form name="fst">	
 	<table>
 		<tr>
 			<td>Массив чисел:</td>
@@ -31,7 +31,7 @@
 	<INPUT value="Очистить" onClick = "RandomArray()" TYPE="button">
 	
 	<P>
-	<table>
+	<table id = "table1">
 		<tr>
 			<td>L</td>
 			<td>R</td>
@@ -41,20 +41,20 @@
 		<tr>
 			<td>0</td>
 			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td >0</td>
+			<td name="f1">0</td>
 		</tr>
 		<tr>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td name="f1">0</td>
+			<td name="f1">0</td>
+			<td name="f1">0</td>
+			<td name="f1">0</td>
 		</tr>
 		<tr>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td name="f1">0</td>
+			<td name="f1">0</td>
+			<td name="f1">0</td>
+			<td name="f1">0</td>
 		</tr>
 	</table>
 </form>
