--- a/IT/lab 2-9/frame1/frame1.html
+++ b/IT/lab 2-9/frame1/frame1.html
@@ -2,6 +2,7 @@
 <HTML><HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 <TITLE>Лабораторная 2-9</TITLE>
+<script src="../framecont.js"></script>
 </HEAD> 
 	<frameset FRAMEBORDER=no, BORDER=0, FRAMESPACING=0 rows="*" cols="180, 180, *" >
 		<frame name="1.1" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.1.html">
