--- a/IT/lab 2-9/w/w0-1.html
+++ b/IT/lab 2-9/w/w0-1.html
@@ -6,12 +6,11 @@
 		<link rel="stylesheet" type="text/css" href="mycs1.css">
 	</HEAD> 
 
-	<BODY BGCOLOR="white" 
-	 TEXT="black" LINK="blue" ALINK="red" VLINK="green">
-	
-	<img src="../r/r0.gif" alt="">
-	<div id="floatTip"></div>
+<BODY background="../r/r0.gif" BGCOLOR="white" 
+ TEXT="black" LINK="blue" ALINK="red" VLINK="green">
+<div id="floatip">w1</div>
 
-	</BODY>
+
+</BODY>
 </HTML>
 
