--- a/IT/lab 2-9/frame1.1/frame1.2.html
+++ b/IT/lab 2-9/frame1.1/frame1.2.html
@@ -23,13 +23,13 @@
 		Номер фрейма:
 		<P>
 		<SELECT NAME="mymenu2">
-		<OPTION VALUE="w1" SELECTED> 1
-		<OPTION VALUE="w2"> 2
-		<OPTION VALUE="w3"> 3
-		<OPTION VALUE="w4"> 4
+		<OPTION VALUE="w1" SELECTED> w1
+		<OPTION VALUE="w2"> w2
+		<OPTION VALUE="w3"> w3
+		<OPTION VALUE="w4"> w4
 		</SELECT>
 		<P>
-		<input type="button" OnClick="window.open(this.form.mymenu1.value, this.form.mymenu2.value);" value="Сопоставить">
+		<input type="button" OnClick="opening(this.form.mymenu1.value, this.form.mymenu2.value);" value="Сопоставить">
 	</form>
 </BODY>
 </HTML>
