--- a/IT/lab 2-9/w/w3.html
+++ b/IT/lab 2-9/w/w3.html
@@ -2,15 +2,14 @@
 <HTML><HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 <TITLE>blank</TITLE>
-<link rel="stylesheet" type="text/css" href="../mycs.css">
-<script src="../infowin.js"></script>
+<link rel="stylesheet" type="text/css" href="mycs1.css">
 </HEAD> 
 
 <BODY BGCOLOR="white" 
  TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 
-	<img src="../r/r0.gif" onMouseOver="toolTip('w3')" onMouseOut="toolTip()"alt="">
-	<div id="floatTip">	</div>
+	<img src="../r/r0.gif" alt="">
+	<div id="floatip">	</div>
 
 
 
