--- a/IT/lab 2-9/frame1.1/frame1.2.html
+++ b/IT/lab 2-9/frame1.1/frame1.2.html
@@ -23,10 +23,10 @@
 		Номер фрейма:
 		<P>
 		<SELECT NAME="mymenu2">
-		<OPTION VALUE="w1" SELECTED> w1
-		<OPTION VALUE="w2"> w2
-		<OPTION VALUE="w3"> w3
-		<OPTION VALUE="w4"> w4
+		<OPTION VALUE="1" SELECTED> w1
+		<OPTION VALUE="2"> w2
+		<OPTION VALUE="3"> w3
+		<OPTION VALUE="4"> w4
 		</SELECT>
 		<P>
 		<input type="button" OnClick="opening(this.form.mymenu1.value, this.form.mymenu2.value);" value="Сопоставить">
