--- a/IT/lab 2-9/frame1/frame1.html
+++ b/IT/lab 2-9/frame1/frame1.html
@@ -5,9 +5,9 @@
 <script src="../framecont.js"></script>
 </HEAD> 
 	<frameset FRAMEBORDER=no, BORDER=0, FRAMESPACING=0 rows="*" cols="180, 180, *" >
-		<frame name="1.1" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.1.html">
-		<frame name="1.2" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.2.html">
-		<frame name="1.3" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.3.html">
+		<frame id="1.1" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.1.html">
+		<frame id="1.2" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.2.html">
+		<frame id="1.3" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no src="../frame1.1/frame1.3.html">
 	</frameset>
 </HTML>
 
