--- a/IT/lab 2-9/w/w4.html
+++ b/IT/lab 2-9/w/w4.html
@@ -2,15 +2,15 @@
 <HTML><HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 <TITLE>blank</TITLE>
-<link rel="stylesheet" type="text/css" href="mycs1.css">
+<link rel="stylesheet" type="text/css" href="../mycs.css">
 </HEAD> 
 
 <BODY BGCOLOR="white" 
  TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 	
-	<img src="../r/r0.gif" alt="">
-	<div id="floatip">	</div>
-
+	<img id="w4" src="../r/r0.gif" onmouseover="toolTip('w4')" onmouseout="toolTip()" alt="">
+	<div id="floatTip"></div>
+	<script src="infowin.js"></script>
 </BODY>
 </HTML>
 
