--- a/IT/lab 2-9/w/w1.html
+++ b/IT/lab 2-9/w/w1.html
@@ -3,15 +3,15 @@
 	<HEAD>
 		<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 		<TITLE>blank</TITLE>
-		<link rel="stylesheet" type="text/css" href="mycs1.css">
+		<link rel="stylesheet" type="text/css" href="../mycs.css">
 	</HEAD> 
 
 	<BODY BGCOLOR="white" 
 	 TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 	
-	<img src="../r/r0.gif" alt="">
+	<img id="w1" src="../r/r0.gif" onmouseover="toolTip('w1')" onmouseout="toolTip()" alt="">
 	<div id="floatTip"></div>
-
+	<script src="infowin.js"></script>
 	</BODY>
 </HTML>
 
