--- a/IT/lab 2-9/list1.html
+++ b/IT/lab 2-9/list1.html
@@ -5,8 +5,8 @@
 </HEAD> 
 
 	<frameset rows="320, *" cols="*" FRAMEBORDER=no BORDER=0 FRAMESPACING=0>
-		<frame src="frame1/frame1.html" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no>
-		<frame src="frame1/frame2.html" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no>
+		<frame id="f1" src="frame1/frame1.html" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no>
+		<frame id="f2" src="frame1/frame2.html" MARGINHEIGHT=0, MARGINWIDTH=0, SCROLLING=no>
 	</frameset>
 </HTML>
 
