--- a/IT/lab 2-10/index.html
+++ b/IT/lab 2-10/index.html
@@ -4,7 +4,7 @@
 <TITLE>Лабораторная 2-10</TITLE>
 </HEAD> 
 
-<BODY BGCOLOR="white" 
+<BODY onload = "idTimer = setInterval('clockworking()', delay)" BGCOLOR="white" 
  TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 
 	
@@ -29,8 +29,7 @@
 			<td><img name="y1" src="LAB11/dg0.gif"></td>
 			<td><img name="y2" src="LAB11/dg0.gif"></td>
 			<td><img name="y3" src="LAB11/dg0.gif"></td>
-			<td><img name="y4" src="LAB11/dg0.gif" onload = "idTimer = setInterval('clockworking()', delay)"></td>
-		</tr>
+			<td><img name="y4" src="LAB11/dg0.gif" ></td>
 		</tr>
 	</table>
 
