--- a/IT/lab 3-1/3-1.html
+++ b/IT/lab 3-1/3-1.html
@@ -1,6 +1,6 @@
 <HTML><HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
-<TITLE>blank</TITLE>
+<TITLE>Лабораторная 3-1</TITLE>
 </HEAD> 
 
 <BODY BGCOLOR="white" 
