--- a/IT/lab 2-13/blank.html
+++ b/IT/lab 2-13/blank.html
@@ -16,10 +16,10 @@
 			<td>16</td>
 		</tr>
 		<tr>
-			<td><INPUT id = "i1" onblur = "parse(2, this.value);" value = "" size = "16" TYPE="text"></td>
-			<td><INPUT id = "i2" onblur = "parse(8, this.value);" value = "" size = "10" TYPE="text"></td>
-			<td><INPUT id = "i3" onblur = "parse(10, this.value);" value = "" size = "8" TYPE="text"></td>
-			<td><INPUT id = "i4" onblur = "parse(16, this.value);" value = "" size = "4" TYPE="text"></td>
+			<td><INPUT id = "i1" oninput = "parse(2, this.value);" value = "" size = "16" TYPE="text"></td>
+			<td><INPUT id = "i2" oninput = "parse(8, this.value);" value = "" size = "10" TYPE="text"></td>
+			<td><INPUT id = "i3" oninput = "parse(10, this.value);" value = "" size = "8" TYPE="text"></td>
+			<td><INPUT id = "i4" oninput = "parse(16, this.value);" value = "" size = "4" TYPE="text"></td>
 		</tr>
 	</table>
 
