--- a/IT/lab 3-2/index.html
+++ b/IT/lab 3-2/index.html
@@ -1,4 +1,5 @@
-<HTML><HEAD>
+<HTML>
+<HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 <TITLE>lab 3-2</TITLE>
 </HEAD> 
@@ -7,10 +8,10 @@
  TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 	<h1>Cookie</h1>
 	<Div id = "hi">Зарегистрируйся!</div>
-	<div id="count"></div>
-	<div id="lastmeet"></div>
-	<P>Введите имя:<INPUT TYPE="text">
-	<P><INPUT TYPE="button" value="Зарегистрироваться">
+	<div id="count" onload="this.innerHTML = 'Здравствуй, ' + getCookie('Username');"></div>
+	<div id="lastmeet" onload="this.innerHTML = 'Вы были на этой странице:' + getCookie('expires');"></div>
+	<P>Введите имя:<INPUT id="UName" TYPE="text">
+	<P><INPUT TYPE="button" onclick = "setCookie(Username, document.getElementById('UName').value,1000*60*60*24*30)" value="Зарегистрироваться">
 	<P><INPUT TYPE="button" value="Обнулить посещения">
 
 </BODY>
