--- a/IT/lab 3-4/index.html
+++ b/IT/lab 3-4/index.html
@@ -2,68 +2,232 @@
 <HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 <TITLE>lab 3-4</TITLE>
+<SCRIPT LANGUAGE="JavaScript" type="text/javascript">
+var xmldoc=new ActiveXObject("Microsoft.XMLDOM"); 
+xmldoc.async=false;
+xmldoc.load("lab3-4.xml"); 
+var student_node, group_node, course_node, faculty_node;
+var obj_but, obj_cbut;
+student_node=group_node=course_node=faculty_node=xmldoc.getElementsByTagName("faculty");
+var newElem;
+var gb=false;
+var smth=true
+var mas_rad=new Array();
+count_elem=new Number(0);
+function LoadDoc()
+{
+ document.getElementById('fac_select').options.length=faculty_node.length;
+ for(var i=0;i<faculty_node.length;i++)
+ {
+  tag=faculty_node.item(i);
+  chltag=tag.getElementsByTagName("caption");
+  document.getElementById('fac_select').options[i]=new Option(chltag.item(0).text,i);
+ }
+ change_fac();
+}
+function change_fac()
+{
+ tag=faculty_node.item(document.getElementById('fac_select').selectedIndex);
+ course_node=tag.getElementsByTagName("course");
+ document.getElementById('cour_select').options.length=course_node.length;
+ for(var i=0;i<course_node.length;i++)
+ {
+  temp_teg=course_node.item(i);
+  viewtag=temp_teg.getElementsByTagName("caption");
+  document.getElementById('cour_select').options[i]=new Option(viewtag.item(0).text);
+ }
+ change_cour();
+}
+function change_cour()
+{
+ tag=course_node.item(document.getElementById('cour_select').selectedIndex);
+ group_node=tag.getElementsByTagName("group");
+ document.getElementById('gr_select').options.length=group_node.length;
+ for(var i=0;i<group_node.length;i++)
+ {
+  temp_teg=group_node.item(i);
+  viewtag=temp_teg.getElementsByTagName("caption");
+  document.getElementById('gr_select').options[i]=new Option(viewtag.item(0).text);
+ }
+ change_gr();
+}
+function change_gr()
+{
+ tag=group_node.item(document.getElementById('gr_select').selectedIndex);
+ student_node=tag.getElementsByTagName("student");
+ document.getElementById('stud_select').options.length=student_node.length;
+ for(var i=0;i<student_node.length;i++)
+ {
+  temp_teg=student_node.item(i);
+  viewtag=temp_teg.getElementsByTagName("caption");
+  document.getElementById('stud_select').options[i]=new Option(viewtag.item(0).text);
+ }
+ build_table();
+}
+
+
+function build_table()
+{
+ var sum=Number(0);
+ tag=student_node.item(document.getElementById('stud_select').selectedIndex);
+ temp_node=tag.getElementsByTagName("*");
+ if (gb)
+ {
+  if(smth){
+  document.body.removeChild(newElem);
+  document.body.removeChild(smalltable);
+  document.body.removeChild(obj_but);
+  document.body.removeChild(obj_cbut);
+  }else{
+  document.body.removeChild(newElem);
+  //document.body.removeChild(smalltable);
+  document.body.removeChild(obj_but);
+  document.body.removeChild(obj_cbut);
+  }
+ }
+ smth = true; 
+ gb=true;
+ newElem=document.createElement('table');
+ newElem.setAttribute('id','tl');
+ newElem.setAttribute('border','1');
+ newElem.setAttribute('name','dyntable');
+ var newRow=newElem.insertRow(0);
+ newRow.setAttribute('border','1');
+ var newCell=newRow.insertCell(0);
+ newCell.setAttribute('width','80%');
+ newCell.innerHTML="<center><b>Предмет</b></center>"; 
+ var newCell=newRow.insertCell(1);
+ newCell.innerHTML="<center><b>0</b></center>"; 
+ var newCell=newRow.insertCell(2);
+ newCell.innerHTML="<center><b>1</b></center>"; 
+ var newCell=newRow.insertCell(3);
+ newCell.innerHTML="<center><b>2</b></center>";
+ count_elem=0;
+ for(var i=1;i<temp_node.length;i++)
+ {
+  var newRow=newElem.insertRow(i);
+  newRow.setAttribute('border','1');
+  count_elem++;
+  find_node=xmldoc.getElementsByTagName(temp_node.item(i).nodeName);
+  var newCell=newRow.insertCell(0);
+  newCell.innerHTML=find_node.item(find_node.length-1).text;
+  for(j=0;j<3;j++)
+  {
+   var newCell=newRow.insertCell(j+1);
+   newrad=document.createElement('input');
+   mas_rad[i-1]=newrad;
+   newrad.setAttribute('type','radio');
+   str='knp'+String(i);
+   newrad.setAttribute('value',i+'');
+   newrad.setAttribute('name',str);
+   //newrad.onclick=function{izmn();};
+   if ((j+"")==temp_node.item(i).text)
+   {
+    newrad.setAttribute('defaultChecked',true);
+    sum+=j;
+   }
+   newCell.appendChild(newrad);
+  }
+ }
+ document.body.appendChild(newElem);
+ smalltable=document.createElement('DIV');
+ smalltable.setAttribute('id','div_text');
+ sr=sum/count_elem;
+ str=sr.toString();
+ strn="";
+
+ obj_but=document.createElement('input');
+ obj_but.setAttribute('type','button');
+ obj_but.setAttribute('value','Выполнить');
+ obj_but.onclick=function(){build_table();};
+ document.body.appendChild(obj_but);
+ obj_cbut=document.createElement('input');
+ obj_cbut.setAttribute('type','button');
+ obj_cbut.setAttribute('value','Отменить');
+ obj_cbut.onclick=function(){can_act();};
+ document.body.appendChild(obj_cbut);
+ for (i=0;i<4;i++)
+  strn+=str.charAt(i);
+ smalltable.innerHTML="Средний балл за контрольный срок составляет "+strn; 
+ document.body.appendChild(smalltable);
+}
+
+
+/*function act()
+{
+ var sum=new Number(0);
+ for (i=1;i<=count_elem;i++)
+ {
+  find_str="knp"+i;
+  obj=document.getElementsByName(find_str);
+  for (j=0;j<3;j++){
+   if (obj[j].checked==true){
+    sum+=j;
+ }}}
+ sr=sum/count_elem;
+ str=sr.toString();
+ strn="";
+ for (i=0;i<4;i++){
+  strn+=str.charAt(i);
+  }
+ //document.body.removeChild(smalltable);
+ document.body.removeChild(obj_but);
+ document.body.removeChild(obj_cbut);
+ smalltable=document.createElement('DIV');
+ smalltable.setAttribute('id','div_text');
+
+ smalltable.innerHTML="Средний балл за контрольный срок составляет "+strn; 
+
+ obj_but=document.createElement('input');
+ obj_but.setAttribute('type','button');
+ obj_but.setAttribute('value','Выполнить');
+ obj_but.onclick=function(){act();};
+ document.body.appendChild(obj_but);
+ obj_cbut=document.createElement('input');
+ obj_cbut.setAttribute('type','button');
+ obj_cbut.setAttribute('value','Отменить');
+ obj_cbut.onclick=function(){can_act();};
+ document.body.appendChild(obj_cbut);
+ document.body.appendChild(smalltable);
+}*/
+
+
+function can_act()
+{
+ document.body.removeChild(smalltable);
+ smth = false;
+}
+
+
+
+/*
+function izmn()
+{
+ st=this.name;
+ alert(st);
+ k=parseInt(st);
+ tag=student_node.item(document.getElementById('stud_select').selectedIndex);
+ temp_node=tag.getElementsByTagName("*");
+ temp_node.item(k).text=0+"";
+ find_str=this.name;
+ obj=document.getElementsByName(find_str);
+ for (j=0;j<3;j++)
+  if (obj[j].checked)
+   temp_node.item(k).text=j+"";
+}*/
+</SCRIPT>
 </HEAD>
 
-<BODY BGCOLOR="white" 
- TEXT="black" LINK="blue" ALINK="red" VLINK="green">
-<form>
-    <select>
-        <option>
-        <option>
-        <option>
-        <option>
-    </select>
-    <select>
-        <option>
-        <option>
-        <option>
-        <option>
-    </select>
-    <select>
-        <option>
-        <option>
-        <option>
-        <option>
-    </select>
-    <select>
-        <option>
-        <option>
-        <option>
-        <option>
-    </select>
-    <p><table border="1" width="50%">
-        <tr>
-            <td>Предмет</td>
-            <td>0</td>
-            <td>1</td>
-            <td>2</td>
-        </tr>
-        <tr>
-            <td>Метрология</td>
-            <td><input type="radio" name="group1"></td>
-            <td><input type="radio" name="group1"></td>
-            <td><input type="radio" name="group1"></td>
-        </tr>
-        <tr>
-            <td>ООП</td>
-            <td><input type="radio" name="group2"></td>
-            <td><input type="radio" name="group2"></td>
-            <td><input type="radio" name="group2"></td>
-        </tr>
-        <tr>
-            <td>Архитектура вычислительных систем</td>
-            <td><input type="radio" name="group3"></td>
-            <td><input type="radio" name="group3"></td>
-            <td><input type="radio" name="group3"></td>
-        </tr>
-    </table>
-</form>
-<!--<script type="text/javascript">
-    var  XMLDoc= new ActiveXObject("Microsoft.XMLDOM");
-    XMLDoc.async=false;
-    XMLDoc.load("table.xml");
+<BODY BGCOLOR="white" TEXT="black" LINK="blue" ALINK="red" VLINK="green" onLoad="LoadDoc()">
+Факультет:<select id="fac_select" size=1 style="width='56px'" onChange="change_fac()">
+</select>
+Курс:<select id="cour_select" size=1 onChange="change_cour()">
+</select>
+Группа:<select id="gr_select" size=1 style="width='75px'" onChange="change_gr()">
+</select>
+ФИО:<select id="stud_select" size=1 style="width='210px'" onChange="build_table()">
+</select><p>
 
-</script>-->
 </BODY>
 </HTML>
 
