Добавил немного CSS в РГЗ (ИТ)

--- a/IT/RandomGZ/head.html
+++ b/IT/RandomGZ/head.html
@@ -1,53 +1,60 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.2//RU">
-<HTML><HEAD>
-<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
-<TITLE>blank</TITLE>
+<HTML>
+<HEAD>
+	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
+	<TITLE>blank</TITLE>
+	<STYLE>
+		.link {
+			text-align: center;
+			font: times;
+		}
+	</STYLE>
 </HEAD> 
 
 <BODY BACKGROUND="http://i080.radikal.ru/1111/ef/e366770f591d.jpg" TEXT="black" LINK="black" ALINK="red" VLINK="black">
 	<P>
 	
-	<H2 align=center><font face="Times">РАНДОМ!</H2>
+	<H2 align=center>РАНДОМ!</H2>
 	
 	<P>
 	
-	<H4 align=center><font face="Times">
-	<A HREF="main.html" target="sec" onmouseover="document.img1.src='icons/picture.gif'" onmouseout="document.img1.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=center NAME="img1">
+	<H4 class=link>
+	<A HREF="main.html" target="win" onmouseover="document.img0.src='icons/picture.gif'" onmouseout="document.img0.src='icons/internet.gif'">
+	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=center NAME="img0">
 	На главную страницу
 	</A>
 	
-	<A HREF="d1.html" target="sec" onmouseover="document.img1.src='icons/picture.gif'" onmouseout="document.img1.src='icons/internet.gif'">
+	<A HREF="d1.html" target="win" onmouseover="document.img1.src='icons/picture.gif'" onmouseout="document.img1.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=center NAME="img1">
 	Пункт 1
 	</A>
 	
-	<A HREF="d2.html" target="sec" onmouseover="document.img2.src='icons/picture.gif'" onmouseout="document.img2.src='icons/internet.gif'">
+	<A HREF="d2.html" target="win" onmouseover="document.img2.src='icons/picture.gif'" onmouseout="document.img2.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img2">
 	Пункт 2
 	</A>
 	
-	<A HREF="d3.html" TARGET="sec" onmouseover="document.img3.src='icons/picture.gif'" onmouseout="document.img3.src='icons/internet.gif'">
+	<A HREF="d3.html" TARGET="win" onmouseover="document.img3.src='icons/picture.gif'" onmouseout="document.img3.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img3">
 	Пункт 3
 	</A>
 	
-	<A HREF="d4.html" TARGET="sec" onmouseover="document.img4.src='icons/picture.gif'" onmouseout="document.img4.src='icons/internet.gif'">
+	<A HREF="d4.html" TARGET="win" onmouseover="document.img4.src='icons/picture.gif'" onmouseout="document.img4.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img4">
 	Пункт 4
 	</A>
 	
-	<A HREF="d5.html" TARGET="sec" onmouseover="document.img5.src='icons/picture.gif'" onmouseout="document.img5.src='icons/internet.gif'">
+	<A HREF="d5.html" TARGET="win" onmouseover="document.img5.src='icons/picture.gif'" onmouseout="document.img5.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img5">
 	Пункт 5
 	</A>
 	
-	<A HREF="d6.html" TARGET="sec" onmouseover="document.img6.src='icons/picture.gif'" onmouseout="document.img6.src='icons/internet.gif'">
+	<A HREF="d6.html" TARGET="win" onmouseover="document.img6.src='icons/picture.gif'" onmouseout="document.img6.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img6">
 	Пункт 6
 	</A>
 	
-	<A HREF="d7.html" TARGET="sec" onmouseover="document.img7.src='icons/picture.gif'" onmouseout="document.img7.src='icons/internet.gif'">
+	<A HREF="d7.html" TARGET="win" onmouseover="document.img7.src='icons/picture.gif'" onmouseout="document.img7.src='icons/internet.gif'">
 	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img7">
 	Пункт 7
 	</A>
