--- a/IT/RandomGZ/index.html
+++ b/IT/RandomGZ/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.2//RU">
 <HTML>
-<FRAMESET ROWS="100, *" frameborder=1>
-	<FRAME SRC="head.html">
-	<FRAME NAME="sec" SRC="main.html">
+<HEAD>
+	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
+	<TITLE>Random</TITLE>
+	<STYLE>
+	.header {
+		border-bottom: 1px solid red;
+	}
+	.window {
+		border-top: 1px solid red;
+	}
+	</STYLE>
+</HEAD> 
+
+<FRAMESET ROWS="100, *" frameborder=0>
+	<FRAME CLASS="header" SRC="head.html">
+	<FRAME CLASS="window" NAME="win" SRC="main.html">
 </FRAMESET>
 </HTML>
