--- a/IT/RandomGZ/main.html
+++ b/IT/RandomGZ/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.2//RU">
-<HTML><HEAD>
+<HTML>
+<HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
-<TITLE>blank</TITLE>
 </HEAD> 
 
 <BODY BACKGROUND="http://p1.pichost.me/i/75/1994338.jpg" TEXT="black" LINK="blue" ALINK="red" VLINK="green">
