--- a/IT/RandomGZ/head.html
+++ b/IT/RandomGZ/head.html
@@ -8,6 +8,11 @@
 			text-align: center;
 			font: times;
 		}
+		.image {
+			text-align: center;
+			width: 15;
+			height: 15;
+		}
 	</STYLE>
 </HEAD> 
 
@@ -20,42 +25,42 @@
 	
 	<H4 class=link>
 	<A HREF="main.html" target="win" onmouseover="document.img0.src='icons/picture.gif'" onmouseout="document.img0.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=center NAME="img0">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img0">
 	На главную страницу
 	</A>
 	
 	<A HREF="d1.html" target="win" onmouseover="document.img1.src='icons/picture.gif'" onmouseout="document.img1.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=center NAME="img1">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img1">
 	Пункт 1
 	</A>
 	
 	<A HREF="d2.html" target="win" onmouseover="document.img2.src='icons/picture.gif'" onmouseout="document.img2.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img2">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img2">
 	Пункт 2
 	</A>
 	
 	<A HREF="d3.html" TARGET="win" onmouseover="document.img3.src='icons/picture.gif'" onmouseout="document.img3.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img3">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img3">
 	Пункт 3
 	</A>
 	
 	<A HREF="d4.html" TARGET="win" onmouseover="document.img4.src='icons/picture.gif'" onmouseout="document.img4.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img4">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img4">
 	Пункт 4
 	</A>
 	
 	<A HREF="d5.html" TARGET="win" onmouseover="document.img5.src='icons/picture.gif'" onmouseout="document.img5.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img5">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img5">
 	Пункт 5
 	</A>
 	
 	<A HREF="d6.html" TARGET="win" onmouseover="document.img6.src='icons/picture.gif'" onmouseout="document.img6.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img6">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img6">
 	Пункт 6
 	</A>
 	
 	<A HREF="d7.html" TARGET="win" onmouseover="document.img7.src='icons/picture.gif'" onmouseout="document.img7.src='icons/internet.gif'">
-	<IMG SRC="icons/internet.gif" WIDTH="15" HEIGHT="15" ALT="" ALIGN=TOP NAME="img7">
+	<IMG SRC="icons/internet.gif" CLASS="image" NAME="img7">
 	Пункт 7
 	</A>
 	</H4>
