Создал глвную страницу

--- a/IT/RandomGZ/main.html
+++ b/IT/RandomGZ/main.html
@@ -1,10 +1,58 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.2//RU">
 <HTML>
-<HEAD>
-<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
-</HEAD> 
+	<HEAD>
+		<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
+		<STYLE>
+			table {
+				text-align: center;
+				margin-left: auto;
+				margin-right: auto;
+				background-color: white;
+				border: 4px solid black
+			}
+			th, td {
+				border: 1px solid black;
+			}
+		</STYLE>
+	</HEAD> 
 
-<BODY BACKGROUND="http://p1.pichost.me/i/75/1994338.jpg" TEXT="black" LINK="blue" ALINK="red" VLINK="green">
-
-</BODY>
+	<BODY BACKGROUND="http://p1.pichost.me/i/75/1994338.jpg" TEXT="black" LINK="blue" ALINK="red" VLINK="green">
+		<table>
+			<tr>
+				<th colspan=2>Путеводитель по меню</th>
+			</tr>
+			<tr>
+				<td>На главную страницу</td>
+				<td>Пункт меню, возвращающий вас на данную страницу</td>
+			</tr>
+			<tr>
+				<td>Пункт 1</td>
+				<td>Объяснение</td>
+			</tr>
+			<tr>
+				<td>Пункт 2</td>
+				<td>Объяснение</td>
+			</tr>
+			<tr>
+				<td>Пункт 3</td>
+				<td>Объяснение</td>
+			</tr>
+			<tr>
+				<td>Пункт 4</td>
+				<td>Объяснение</td>
+			</tr>
+			<tr>
+				<td>Пункт 5</td>
+				<td>Объяснение</td>
+			</tr>
+			<tr>
+				<td>Пункт 6</td>
+				<td>Объяснение</td>
+			</tr>
+			<tr>
+				<td>Пункт 7</td>
+				<td>Объяснение</td>
+			</tr>
+		</table>
+	</BODY>
 </HTML>
