Ещё больше CSS-а

--- a/IT/RandomGZ/head.html
+++ b/IT/RandomGZ/head.html
@@ -4,6 +4,23 @@
 		<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 		<TITLE>blank</TITLE>
 		<STYLE>
+			.t1 {
+				text-align: center;
+				color: black;
+				margin-left: 10pt;
+				font-size: 30pt;
+				font-weight: bold;
+				font-family: times;
+			}
+			.t2 {
+				text-align: center;
+				color: gray;
+				margin-top: -39pt;
+				margin-left: 6pt;
+				font-size: 30pt;
+				font-weight: bold;
+				font-family: times;
+			}
 			.link {
 				text-align: center;
 				font: times;
@@ -17,11 +34,8 @@
 	</HEAD> 
 
 	<BODY BACKGROUND="http://i080.radikal.ru/1111/ef/e366770f591d.jpg" TEXT="black" LINK="black" ALINK="red" VLINK="black">
-		<P>
-		
-		<H2 align=center>РАНДОМ!</H2>
-		
-		<P>
+		<DIV CLASS="t1">СЛУЧАЙНЫЙ САЙТ</DIV>
+		<DIV CLASS="t2">СЛУЧАЙНЫЙ САЙТ</DIV>
 		
 		<H4 class=link>
 		<A HREF="main.html" target="win" onmouseover="document.img0.src='icons/picture.gif'" onmouseout="document.img0.src='icons/internet.gif'">
