--- a/IT/RandomGZ/index.html
+++ b/IT/RandomGZ/index.html
@@ -13,7 +13,7 @@
 		</STYLE>
 	</HEAD> 
 
-	<FRAMESET ROWS="100, *" frameborder=0>
+	<FRAMESET ROWS="115px, *" frameborder=0>
 		<FRAME CLASS="header" SRC="head.html">
 		<FRAME CLASS="window" NAME="win" SRC="main.html">
 	</FRAMESET>
