Добавил часы (РГЗ ИТ)
Выглядит всё по-прежнему ужасно, но хоть работает

--- a/IT/RandomGZ/head.html
+++ b/IT/RandomGZ/head.html
@@ -43,9 +43,9 @@
 		На главную страницу
 		</A>
 		
-		<A HREF="d1.html" target="win" onmouseover="document.img1.src='icons/picture.gif'" onmouseout="document.img1.src='icons/internet.gif'">
+		<A HREF="clock.html" target="win" onmouseover="document.img1.src='icons/picture.gif'" onmouseout="document.img1.src='icons/internet.gif'">
 		<IMG SRC="icons/internet.gif" CLASS="image" NAME="img1">
-		Пункт 1
+		Рандомное время
 		</A>
 		
 		<A HREF="d2.html" target="win" onmouseover="document.img2.src='icons/picture.gif'" onmouseout="document.img2.src='icons/internet.gif'">
