--- a/IT/RandomGZ/main.html
+++ b/IT/RandomGZ/main.html
@@ -28,8 +28,9 @@
 				<td>Пункт меню, возвращающий вас на данную страницу</td>
 			</tr>
 			<tr>
-				<td>Пункт 1</td>
-				<td>Объяснение</td>
+				<td>Рандомное время</td>
+				<td>На данной странице можно увидеть время в случайном <BR>
+					часовом поясе нашей планеты</td>
 			</tr>
 			<tr>
 				<td>Пункт 2</td>
