Доделал часы (РГЗ ИТ)

--- a/IT/RandomGZ/clock.html
+++ b/IT/RandomGZ/clock.html
@@ -14,14 +14,14 @@
 				background-color: white;
 			}
 		</STYLE>
+		<script src="rand.js"></script>
+		<script src="clock.js"></script>
 	</HEAD> 
 
-	<BODY onload = "idTimer = setInterval('clockworking()', delay)" BGCOLOR="white" TEXT="black" LINK="blue" ALINK="red" VLINK="green">
+	<BODY onload = "idTimer = setInterval('clockworking()', delay); rand_tz = getRandomInt(-12, 12);" BGCOLOR="white" TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 
-		<script src="clock.js"></script>
-		
 		<H1 align="center">бпелъ он пюмднлмнлс вюянбнлс онъяс</H1>
-		<div align="center" id="timezone">юссссс</div>
+		<div align="center" id="timezone">рЕЙСЫХИ ВЮЯНБНИ ОНЪЯ:</div>
 		
 		<table BORDER=0, CELLSPACING=0, CELLPADDING=0>
 			<tr>
