Структурно улучшил сайт (РГЗ ИТ)
Теперь всё лежит по папочкам

--- a/IT/RandomGZ/index.html
+++ b/IT/RandomGZ/index.html
@@ -14,7 +14,7 @@
 	</HEAD> 
 
 	<FRAMESET ROWS="115px, *" frameborder=0>
-		<FRAME CLASS="header" SRC="head.html">
-		<FRAME CLASS="window" NAME="win" SRC="main.html">
+		<FRAME CLASS="header" SRC="pages\head.html">
+		<FRAME CLASS="window" NAME="win" SRC="pages\main.html">
 	</FRAMESET>
 </HTML>
