Добавил "случайного пользователя ВК" (РГЗ ИТ)
Странная функция, но зато тему раскрывает хорошо

--- a/IT/RandomGZ/pages/head.html
+++ b/IT/RandomGZ/pages/head.html
@@ -48,9 +48,9 @@
 		Рандомное время
 		</A>
 		
-		<A HREF="d2.html" target="win" onmouseover="document.img2.src='../icons/picture.gif'" onmouseout="document.img2.src='../icons/internet.gif'">
+		<A HREF="vk.html" target="win" onmouseover="document.img2.src='../icons/picture.gif'" onmouseout="document.img2.src='../icons/internet.gif'">
 		<IMG SRC="../icons/internet.gif" CLASS="image" NAME="img2">
-		Пункт 2
+		Рандомный человек
 		</A>
 		
 		<A HREF="d3.html" TARGET="win" onmouseover="document.img3.src='../icons/picture.gif'" onmouseout="document.img3.src='../icons/internet.gif'">
