--- a/IT/RandomGZ/pages/main.html
+++ b/IT/RandomGZ/pages/main.html
@@ -33,8 +33,10 @@
 					часовом поясе нашей планеты</td>
 			</tr>
 			<tr>
-				<td>Пункт 2</td>
-				<td>Объяснение</td>
+				<td>Рандомный человек</td>
+				<td>На данной странице можно получить ссылку на случайного<BR>
+				пользователя соц. сети ВКонтакте. Полезно для любителей <BR>
+				знакомств с новыми людьми</td>
 			</tr>
 			<tr>
 				<td>Пункт 3</td>
