Добавляем сайту автономности (РГЗ ИТ)
По-идее, это чистый дебилизм: добавлять материалы сайта на диск на
случай, если не будет интернета, но мало ли.

--- a/IT/RandomGZ/pages/head.html
+++ b/IT/RandomGZ/pages/head.html
@@ -30,10 +30,13 @@
 				width: 15;
 				height: 15;
 			}
+			body {
+				background: url(../fons/head.jpg) 100% no-repeat;
+			}
 		</STYLE>
 	</HEAD> 
 
-	<BODY BACKGROUND="http://i080.radikal.ru/1111/ef/e366770f591d.jpg" TEXT="black" LINK="black" ALINK="red" VLINK="black">
+	<BODY TEXT="black" LINK="black" ALINK="red" VLINK="black">
 		<DIV CLASS="t1">яксвюимши яюир</DIV>
 		<DIV CLASS="t2">яксвюимши яюир</DIV>
 		
