--- a/IT/RandomGZ/pages/main.html
+++ b/IT/RandomGZ/pages/main.html
@@ -7,16 +7,20 @@
 				text-align: center;
 				margin-left: auto;
 				margin-right: auto;
-				background-color: white;
-				border: 4px solid black
+				background-color: #d3d3d3;
+				border: 4px solid black;
 			}
 			th, td {
 				border: 1px solid black;
 			}
+			body {
+				background: url(../fons/main.jpg) 100% 100% no-repeat;
+				background-size: cover;
+			}
 		</STYLE>
 	</HEAD> 
 
-	<BODY BACKGROUND="http://p1.pichost.me/i/75/1994338.jpg" TEXT="black" LINK="blue" ALINK="red" VLINK="green">
+	<BODY TEXT="black" LINK="blue" ALINK="red" VLINK="green">
 		<P>
 		
 		<table>
