--- a/IT/RandomGZ/pages/vk.html
+++ b/IT/RandomGZ/pages/vk.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
 		<STYLE>
 			body {
-				background: url(https://img2.goodfon.ru/original/1366x768/8/bf/vk-vkontakte-grey-vk.jpg) 100% 100% no-repeat;
+				background: url(../fons/vk.jpg) 100% 100% no-repeat;
 				background-size: cover;
 			}
 			h1, h4, div {
@@ -20,7 +20,7 @@
 		<h4>
 		На этой страничке можно получить ссылку на случайного человека из социальной сети "ВКонтакте". 
 		Это довольно просто. <BR>
-		Достаточно одного клика по кнопочке внизу и можно переходить по ссылке. <BR>
+		Достаточно одного клика по кнопке внизу и можно переходить по ссылке. <BR>
 		Иногда случай - это довольно таки интересно. 
 		Особенно общение со случайным человеком из "Вконтакте".
 		</h3>
