Добавил генератор рандомных чисел (РГЗ ИТ)

--- a/IT/RandomGZ/pages/main.html
+++ b/IT/RandomGZ/pages/main.html
@@ -43,8 +43,8 @@
 				знакомств с новыми людьми</td>
 			</tr>
 			<tr>
-				<td>Пункт 3</td>
-				<td>Объяснение</td>
+				<td>Рандомное число</td>
+				<td>Генератор рандомных чисел</td>
 			</tr>
 			<tr>
 				<td>Пункт 4</td>
