--- a/IT/RandomGZ/pages/vk.html
+++ b/IT/RandomGZ/pages/vk.html
@@ -14,7 +14,7 @@
 		</STYLE>
 	</head>
 
-	<body onload="getRandomInt();" LINK="grey" ALINK="red" VLINK="white">
+	<body LINK="grey" ALINK="red" VLINK="white">
 		<h1>Случайный человек ВКонтакте</h1>
 		<p>
 		<h4>
