--- a/IT/RandomGZ/pages/head.html
+++ b/IT/RandomGZ/pages/head.html
@@ -56,9 +56,9 @@
 		Рандомный человек
 		</A>
 		
-		<A HREF="d3.html" TARGET="win" onmouseover="document.img3.src='../icons/picture.gif'" onmouseout="document.img3.src='../icons/internet.gif'">
+		<A HREF="digit.html" TARGET="win" onmouseover="document.img3.src='../icons/picture.gif'" onmouseout="document.img3.src='../icons/internet.gif'">
 		<IMG SRC="../icons/internet.gif" CLASS="image" NAME="img3">
-		Пункт 3
+		Рандомное число
 		</A>
 		
 		<A HREF="d4.html" TARGET="win" onmouseover="document.img4.src='../icons/picture.gif'" onmouseout="document.img4.src='../icons/internet.gif'">
