Добавил генераторы рандомного цвета и дня недели (РГЗ ИТ)
Случайно слепил две правки в одну

--- a/IT/RandomGZ/pages/head.html
+++ b/IT/RandomGZ/pages/head.html
@@ -61,14 +61,14 @@
 		Рандомное число
 		</A>
 		
-		<A HREF="d4.html" TARGET="win" onmouseover="document.img4.src='../icons/picture.gif'" onmouseout="document.img4.src='../icons/internet.gif'">
+		<A HREF="color.html" TARGET="win" onmouseover="document.img4.src='../icons/picture.gif'" onmouseout="document.img4.src='../icons/internet.gif'">
 		<IMG SRC="../icons/internet.gif" CLASS="image" NAME="img4">
-		Пункт 4
+		Рандомный цвет
 		</A>
 		
-		<A HREF="d5.html" TARGET="win" onmouseover="document.img5.src='../icons/picture.gif'" onmouseout="document.img5.src='../icons/internet.gif'">
+		<A HREF="day.html" TARGET="win" onmouseover="document.img5.src='../icons/picture.gif'" onmouseout="document.img5.src='../icons/internet.gif'">
 		<IMG SRC="../icons/internet.gif" CLASS="image" NAME="img5">
-		Пункт 5
+		Рандомный день недели
 		</A>
 		
 		<A HREF="d6.html" TARGET="win" onmouseover="document.img6.src='../icons/picture.gif'" onmouseout="document.img6.src='../icons/internet.gif'">
