--- a/IT/RandomGZ/pages/main.html
+++ b/IT/RandomGZ/pages/main.html
@@ -4,7 +4,7 @@
 		<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=Windows-1251">
 		<STYLE>
 			table {
-				text-align: center;
+				text-align: justify;
 				margin-left: auto;
 				margin-right: auto;
 				background-color: #d3d3d3;
@@ -47,12 +47,16 @@
 				<td>Генератор рандомных чисел</td>
 			</tr>
 			<tr>
-				<td>Пункт 4</td>
-				<td>Объяснение</td>
+				<td>Рандомный цвет</td>
+				<td>На данной странице вы получите прямоугольник случайного <BR>
+				цвета. Если он вам понравится, вы сможете тут же скопировать <BR>
+				его HEX код и использоавть где-то ещё. <BR>
+				Полезно для дизайнеров, художников и прочих творцов</td>
 			</tr>
 			<tr>
-				<td>Пункт 5</td>
-				<td>Объяснение</td>
+				<td>Рандомный день недели</td>
+				<td>На данной странице вы увидите мою вымученную шутку и <BR>
+				случайный день недели. Не знаю, кому это может пригодиться.</td>
 			</tr>
 			<tr>
 				<td>Пункт 6</td>
