--- a/IT/RandomGZ/pages/main.html
+++ b/IT/RandomGZ/pages/main.html
@@ -59,12 +59,10 @@
 				случайный день недели. Не знаю, кому это может пригодиться.</td>
 			</tr>
 			<tr>
-				<td>Пункт 6</td>
-				<td>Объяснение</td>
-			</tr>
-			<tr>
-				<td>Пункт 7</td>
-				<td>Объяснение</td>
+				<td>Рандомный рандом</td>
+				<td>За этим пунктом скрывается сама суть этого сайта. Нажимая <BR>
+				эту ссылку вы попадете на одну из указанных выше страниц...<BR>
+				Возможно. Почему так? Никогда не знаешь, что таит в себе рандом...</td>
 			</tr>
 		</table>
 	</BODY>
